--- a/.github/workflows/build-example-keebio_levinson.yml
+++ b/.github/workflows/build-example-keebio_levinson.yml
@@ -6,6 +6,6 @@ on:
   - workflow_dispatch
 jobs:
   build:
-    uses: ./.github/workflows/main.yml
+    uses: manna-harbour/miryoku_qmk/.github/workflows/main.yml@miryoku
     with:
       keyboard: '["keebio/levinson"]'
