--- a/.github/workflows/build-inputs.yml
+++ b/.github/workflows/build-inputs.yml
@@ -72,7 +72,7 @@ jobs:
           set-output "custom_config" "${{ github.event.inputs.custom_config }}"
           set-output "merge" "${{ github.event.inputs.merge }}"
   build:
-    uses: ./.github/workflows/main.yml
+    uses: manna-harbour/miryoku_qmk/.github/workflows/main.yml@miryoku
     needs: process-inputs
     with:
       keyboard: ${{ needs.process-inputs.outputs.keyboard }}
