--- a/.github/workflows/test-all-configs.yml
+++ b/.github/workflows/test-all-configs.yml
@@ -7,32 +7,10 @@ on:
 jobs:
   build:
     if: github.repository_owner == 'manna-harbour'
-    uses: ./.github/workflows/main.yml
+    uses: manna-harbour/miryoku_qmk/.github/workflows/main.yml@miryoku
     with:
       keyboard: '["crkbd"]'
-      alphas: '[
-        "default",
-        "azerty",
-        "colemak",
-        "colemakdhk",
-        "dvorak",
-        "halmak",
-        "workman",
-        "qwerty",
-        "qwertz"
-      ]'
-      nav: '[
-        "default",
-        "vi",
-        "invertedt"
-      ]'
-      clipboard: '[
-        "default",
-        "fun",
-        "mac",
-        "win"
-      ]'
-      layers: '[
-        "default",
-        "flip"
-      ]'
+      alphas: '["default","azerty","colemak","colemakdhk","dvorak","halmak","workman","qwerty","qwertz"]'
+      nav: '["default","vi","invertedt"]'
+      clipboard: '["default","fun","mac","win"]'
+      layers: '["default","flip"]'
