--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -9,6 +9,6 @@ on:
 jobs:
   build:
     if: github.repository_owner == 'manna-harbour'
-    uses: ./.github/workflows/main.yml
+    uses: manna-harbour/miryoku_qmk/.github/workflows/main.yml@miryoku
     with:
       keyboard: '["crkbd"]'
