--- a/.github/workflows/test-merge.yml
+++ b/.github/workflows/test-merge.yml
@@ -7,10 +7,7 @@ on:
 jobs:
   build:
     if: github.repository_owner == 'manna-harbour'
-    uses: ./.github/workflows/main.yml
+    uses: manna-harbour/miryoku_qmk/.github/workflows/main.yml@miryoku
     with:
       keyboard: '["crkbd"]'
-      merge: '[
-        "qmk/qmk_firmware/master",
-        "qmk/qmk_firmware/develop"
-      ]'
+      merge: '["qmk/qmk_firmware/master","qmk/qmk_firmware/develop"]'
