Revert "[miryoku-github] Copy all generated firmware regardless of extension"
This reverts commit 0f539056c40ca7c082728c140b1fcbf2145487ca.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,13 @@ jobs:
         run: qmk compile -kb ${{ matrix.keyboard }} -km manna-harbour_miryoku
       - name: Copy firmware
         run: |
-          cp *_manna-harbour_miryoku.* "${{ steps.inputs.outputs.artifact-dir }}"
+          for file in *.hex *.bin
+          do
+            if [ -f "$file" ]
+            then
+              cp "$file" "${{ steps.inputs.outputs.artifact-dir }}"
+            fi
+          done
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
